--- a/src/styles/sass/App.css
+++ b/src/styles/sass/App.css
@@ -1,5 +1,7 @@
+@use 'vars';
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: 'PT Sans', sans-serif;
@@ -18,8 +20,13 @@ ul li {
 }
 
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
   background-color: #242424;
   padding: 2rem;
@@ -65,14 +72,19 @@ h2 {
 }
 
 .flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .flex-center {
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .grid {
+  display: -ms-grid;
   display: grid;
 }
 
@@ -103,3 +115,4 @@ h2 {
 .text-center {
   text-align: center;
 }
+/*# sourceMappingURL=App.css.map */
