add resume show button effecrts and auto scroll to top for each page

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -28,7 +28,9 @@
 
 #about p {
     line-height: 1.6;
-    font-size: 1.2rem;
+    font-size: 1.6rem;
+    font-weight: 2;
+    //font-family: Roboto, sans-serif;
 }
 
 .about-skills h3 {
