--- a/src/styles/Process.scss
+++ b/src/styles/Process.scss
@@ -8,9 +8,9 @@
 }
 
 #process section > p {
-    font-size: 1.2rem;
     padding-bottom: 2rem;
     color: #242424;
+    //text-align: left;
 }
 
 #timeline {
