--- a/src/styles/Resume.scss
+++ b/src/styles/Resume.scss
@@ -79,3 +79,19 @@
 .arrow:hover {
     cursor: pointer;
 }
+
+.rotate {
+    transform: rotate(90deg);
+    transition: transform 0.6s ease;
+}
+
+.hide {
+    height: 0px;
+    overflow: hidden;
+    transition: height 0.6s ease, padding 0.6s ease;
+}
+
+.show {
+    height: fit-content;
+    transition: height 0.6s ease, padding 0.6s ease;
+}
