--- a/src/styles/HeroSection.scss
+++ b/src/styles/HeroSection.scss
@@ -1,3 +1,12 @@
+:root {
+    --orange-web: #ffa400ff;
+    --carolina-blue: #009ffdff;
+    --st-patricks-blue: #2a2a72ff;
+    --raisin-black: #232528ff;
+    --alice-blue: #eaf6ffff;
+    --white: #fff;
+}
+
 video {
     object-fit: cover;
     width: 100%;
