--- a/src/styles/Utils.scss
+++ b/src/styles/Utils.scss
@@ -1,24 +1,27 @@
-@use 'vars';
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'PT Sans', sans-serif;
-    /*font-family: 'Montserrat', sans-serif;*/
-    /*font-family: 'Roboto', sans-serif;*/
-    color: #fff;
-}
-
-h1, h2, h3, ul, li, p {
-    margin: 0;
-    padding: 0;
+.h1 {
+    font-size: 3rem;
+    margin-bottom: .6rem;
 }
   
-ul li {
-    list-style-type: none;
+.h2 {
+    font-size: 2.4rem;
+    margin-bottom: .6rem;
 }
   
+.h3 {
+    font-size: 2rem;
+}
+
+.h4 {
+    font-size: 1.6rem;
+}
+
+.hidden {
+    display: none;
+    overflow: hidden;
+    transition: height 0.6s ease, padding 0.6s ease;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -26,30 +29,8 @@ ul li {
     background-color: #242424;
     padding: 2rem;
 }
-  
-.h1 {
-    font-size: 3rem;
-    margin-bottom: .6rem;
-}
-  
-.h2 {
-    font-size: 1.6rem;
-    margin-bottom: .6rem;
-}
-  
-.h3 {
-    font-size: 1.4rem;
-}
-  
-h2 {
-    font-size: 2rem;
-}
-  
-.container > p {
-    font-size: 1.2rem;
-    margin-bottom: 2rem;
-}
-  
+
+
 .fill {
     width: 100%;
     height: 100vh;
@@ -100,6 +81,10 @@ h2 {
   
 .margin-auto {
     margin: auto;
+}
+
+.margin-bottom {
+    margin-bottom: 1rem;
 }
   
 .text-center {
