--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,12 +3,10 @@
   margin: 0;
   padding: 0;
   font-family: 'PT Sans', sans-serif;
-  /*font-family: 'Montserrat', sans-serif;*/
-  /*font-family: 'Roboto', sans-serif;*/
   color: #fff;
 }
 
-h1, h2, h3, h3, ul, li, p {
+h1, h2, h3, h3, h4, h5, ul, li, p, div {
   margin: 0;
   padding: 0;
 }
