--- a/src/styles/Resume.scss
+++ b/src/styles/Resume.scss
@@ -1,61 +1,84 @@
+@import './vars';
+
 .resume-page {
-    background-color: #242424;
+    background-color: $black;
+
+    div {
+        font-size: 1.2rem;
+        line-height: 1.6;
+    }
+
+    .resume-container {
+        text-align: left;
+        color: #fff;
+        max-width: 1080px;
+        margin: 0 auto;
+
+        .download-resume {
+            text-align: left;
+            padding: 1rem 0 0 2rem;
+        }
+
+        h3, h4, a, p, li{
+            font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Tahoma,Geneva,Verdana,"Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+        }
+
+        p {
+            font-weight: 300;
+        }
+
+        h3 {
+            font-size: 2rem;
+        }
+
+        h4 {
+            font-size: 1.6rem;
+            line-height: 1.5;
+            margin: 5px 0;
+        }
+
+        a {
+            //color: #4fe6ff;
+            //color: $celeste;
+            color: $carolina-blue;
+        }
+
+        .large-text {
+            //font-size: 1.4rem;
+            font-weight: bold;
+        }
+
+        .section {
+            padding: 2rem;
+            border-bottom: solid 1px grey;
+
+
+            .workout-app {
+                margin-top: 2rem;
+            }
+        }
+
+
+        .resume-contact{
+            padding: 1rem 2rem 2rem;
+        }
+
+        .contact-item {
+            display: flex;
+            justify-content: space-between;
+
+            i {
+                color: #fff;
+            }
+        }
+
+    }
 }
 
-.download-resume {
-    text-align: left;
-    padding: 1rem 0 0 2rem;
-}
 
-.resume-page div {
-    font-size: 1.2rem;
-    line-height: 1.6;
-}
 
-.resume-container {
-    text-align: left;
-    color: #fff;
-    max-width: 1080px;
-    margin: 0 auto;
-}
-.resume-container h3 {
-    font-size: 1.6rem;
-}
 
-.resume-container h4 {
-    font-size: 1.2rem;
-    line-height: 1.5;
-    margin: 5px 0;
-}
 
-.resume-container a {
-    color: #4fe6ff;
-}
-
-.resume-head {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    padding: 2rem 2rem 0;
-}
-
-.resume-contact, .resume-skills, .resume-projects, .client-projects, .resume-education {
-    padding: 2rem;
-    border-bottom: solid 1px grey;
-}
-
-.resume-contact{
-    padding: 1rem 2rem 2rem;
-}
-
-.contact-item {
-    display: flex;
-    justify-content: space-between;
-}
-
-.contact-item i {
-    color: #fff;
-}
 
 #accordion {
     display: grid;
