--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,8 +1,3 @@
-// Media Sizes
-$Medium: 1080px;
-$Small: 800px;
-$Smallest: 600px;
-
 // Main colors
 $white: #fff;
 $black: #242424;
@@ -43,6 +38,30 @@ $melon: rgba(231, 173, 153, 1);
 $new-york-pink: rgba(206, 121, 107, 1);
 $persian-orange: rgba(193, 140, 93, 1);
 $black-coral: rgba(73, 88, 103, 1);
+
+// Font Sizes
+$font3rem: 3rem;
+$font1-6rem: 1.6rem;
+$font1-2rem: 1.2rem;
+
+// Media Sizes
+$Large: 1320px;
+$Medium: 1080px;
+$Small: 800px;
+$Smallest: 600px;
+
+@media screen and (max-width: $Medium) {
+  $font3rem: 2.25rem;
+  $font1-6rem: 1.2rem;
+  $font1-2rem: 0.9rem;
+}
+
+
+
+
+
+
+
 
 
 // Gradient Scheme 1
