--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,6 +1,7 @@
 // Main colors
 $white: #fff;
 $black: #242424;
+$black2: #242222;
 $grey: #CACAC9;
 $dark-grey: #2f2e2d;$color1: rgba(88, 75, 83, 1);
 
