--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -1,97 +1,93 @@
 @import "./vars";
 
-.navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-    padding: 2rem;
-    height: 80px;
+#navbar {
+  background: $gradient-black;
+  position: sticky;
+	top: 0;
+	left: 0;
+	width: 100%;
+  z-index: 999;
+
+  nav {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    font-size: 1.2rem;
-    position: sticky;
-    top: 0;
-    z-index: 999;
-    padding: 0 20px;
-}
-
-.navbar-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 0 1.5rem;
     height: 80px;
-    width: 100%;
-}
 
-.navbar-logo {
-    color: $white;
-    justify-self: start;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 2rem;
-    align-items: center;
-}
-
-.fa-typo3 {
-    margin-left: 0.5rem;
-    font-size: 1.8rem;
-}
-
-.nav-menu {
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-gap: 10px;
-    list-style: none;
-    text-align: center;
-    width: 60vw;
-    justify-content: end;
-    margin-right: 2rem;
-}
-
-.nav-item {
-    height: 80px;
-}
-
-.nav-links {
-    color: $white;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    height: 100%;
-
-    &:hover {
-        //border-bottom: 4px solid $white;
-        transform: translateY(-4px);
-        transition: all 0.2s ease-out;
+    a {
+      text-decoration: none;
     }
 
-    &.selected {
-        border-bottom: 4px solid $white;
-        transition: all 0.2s ease-out;
+    #logo-name {
+      font-size: 2rem;
+      padding-left: 10px;
     }
-}
 
-.fa-bars {
-    color: $white;
-}
+    #hamburger {
+      display: none;
+    }
 
-.nav-links-mobile {
-    display: none;
-}
+    ul {
+      display: flex;
+      align-items: center;
 
-.menu-icon {
-    display: none;
-}
+      li {
+        display: grid;
+        grid-template-columns: repeat(4, auto);
+        grid-gap: 10px;
 
-.contact {
-    display: none;
+        .navlinks {
+          font-size: 1.2rem;
+          padding: 0.5rem 1rem;
+          height: 70px;
+          display: flex;
+          align-items: center;
+
+          &:hover {
+            transform: translateY(-4px);
+            transition: all 0.2s ease-out;
+          }
+
+          &.selected {
+            border-bottom: 4px solid $white;
+            transition: all 0.2s ease-out;
+          }
+        }
+
+        &:last-child > a {
+          border: 1px solid $white;
+          border-radius: 2px;
+          padding: 8px 20px;
+          font-size: 1.2rem;
+        }
+
+        &:last-child > a:hover {
+          background-color: $white;
+          color: $black;
+          transition: all 0.3s ease-out;
+          transition: 250ms;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: $Medium) {
-    .NavbarItems {
-        position: relative;
-    }
 
-    .nav-menu {
+  #navbar {
+    nav {
+      #hamburger {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translate(-100%, 60%);
+        font-size: 1.8rem;
+        cursor: pointer;
+      }
+  
+      ul {
         display: flex;
         flex-direction: column;
         width: 100%;
@@ -101,79 +97,86 @@
         left: -100%;
         opacity: 1;
         transition: all 0.5s ease;
-
+  
         &.active {
-            background: $black2;
-            left: 0;
-            opacity: 1;
-            transition: all 0.5s ease;
-            z-index: 1;
+          background: $black2;
+          left: 0;
+          opacity: 1;
+          transition: all 0.5s ease;
+          z-index: 1;
         }
-    }
+  
+        li {
+          display: block;
+          margin: 2rem 0;
+          width: 100%;
+          background-color: transparent;
+          transition: all 0.3s ease-out;
+          text-align: center;
+          
+          .navlinks {
+            display: flex;
+            justify-content: center;
+            width: 80%;
+            border-radius: 4px;
+            border: 1px solid $white;
+            background: transparent;
+            font-size: 1.5rem;
+            margin: auto;
 
-    .nav-links {
-        text-align: center;
-        padding: 2rem;
-        width: 100%;
-        display: table;
+            &:hover {
+              background-color: $white;
+              color: $black;
+              transform: none;
+            }
 
-        &:hover {
-            background-color: $white;
-            color: $black;
-            border-radius: 0;
-            border-bottom: 4px solid $black2;
-            border-top: 4px solid $black2;
+            &.selected {
+              border-bottom: none;
+              transition: all 0.2s ease-out;
+              background: $white;
+              color: $black;
+            }
+          }
+
+          &:last-child > a {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 80%;
+            border-radius: 4px;
+            border: 1px solid $white;
+            background: transparent;
+            font-size: 1.5rem;
+            margin: auto;
+            padding: 0.5rem 1rem;
+            height: 70px;
+          }
+          
         }
-
-        &.selected {
-            background-color: $white;
-            color: $black;
-            border-radius: 0;
-            border: none;
-        }   
+  
+        // .navlinks-contact {
+        //   display: block;
+        //   text-align: center;
+        //   margin: 2rem auto;
+        //   border-radius: 4px;
+        //   width: 80%;
+        //   text-decoration: none;
+        //   font-size: 1.5rem;
+        //   background-color: transparent;
+        //   color: $white;
+        //   padding: 14px 20px;
+        //   border: 1px solid$white;
+        //   transition: all 0.3s ease-out;
+  
+        //   &:hover {
+        //       background:$white;
+        //       color: $black;
+        //       transition: 250ms;
+        //   }
+        // }
+      }
     }
+  }
 
-    .navbar-logo {
-        position: absolute;
-        margin: 0;
-        top: 0;
-        left: 0;
-        transform: translate(25%, 50%);
-    }
-
-    .menu-icon {
-        display: block;
-        position: absolute;
-        top: 0;
-        right: 0;
-        transform: translate(-100%, 60%);
-        font-size: 1.8rem;
-        cursor: pointer;
-    }
-
-    .fa-times {
-        color: $white;
-        font-size: 2rem;
-    }
-
-    .nav-links-mobile {
-        display: block;
-        text-align: center;
-        margin: 2rem auto;
-        border-radius: 4px;
-        width: 80%;
-        text-decoration: none;
-        font-size: 1.5rem;
-        background-color: transparent;
-        color: $white;
-        padding: 14px 20px;
-        border: 1px solid$white;
-        transition: all 0.3s ease-out;
-
-        &:hover {
-            background:$white;
-            color: $black;
-            transition: 250ms;
-        }
-    }
+  
 }
