--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -5,7 +5,7 @@
 
 .about-page h2 {
     text-align: center;
-
+    font-family: 'PT Sans', sans-serif;
 }
 
 .about-container {
@@ -24,7 +24,6 @@
     line-height: 1.6;
     font-size: 1.6rem;
     font-weight: 2;
-    //font-family: Roboto, sans-serif;
 }
 
 .about-skills h3 {
