--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -109,11 +109,15 @@
   
         li {
           display: block;
-          margin: 2rem 0;
+          margin: 1rem 0;
           width: 100%;
           background-color: transparent;
           transition: all 0.3s ease-out;
           text-align: center;
+
+          &:first-child {
+            margin-top: 2rem;
+          }
           
           .navlinks {
             display: flex;
@@ -152,32 +156,8 @@
             padding: 0.5rem 1rem;
             height: 70px;
           }
-          
         }
-  
-        // .navlinks-contact {
-        //   display: block;
-        //   text-align: center;
-        //   margin: 2rem auto;
-        //   border-radius: 4px;
-        //   width: 80%;
-        //   text-decoration: none;
-        //   font-size: 1.5rem;
-        //   background-color: transparent;
-        //   color: $white;
-        //   padding: 14px 20px;
-        //   border: 1px solid$white;
-        //   transition: all 0.3s ease-out;
-  
-        //   &:hover {
-        //       background:$white;
-        //       color: $black;
-        //       transition: 250ms;
-        //   }
-        // }
       }
     }
   }
-
-  
 }
