--- a/src/styles/Portfolio.scss
+++ b/src/styles/Portfolio.scss
@@ -1,14 +1,30 @@
 @import './vars';
 
 .portfolio {
-    height: 100vh;
     background-color: $black;
     text-align: center;
     padding: 2rem;
 
-    h1 {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    section {
+        div {
+            img {
+                max-width: 400px;
+                max-height: 400px;
+                transform: scale(1);
+                transition: transform 0.5s ease;
+
+                &:hover {
+                    transform: scale(1.04);
+					transition: transform 0.5s ease;
+                }
+            }
+
+            h3 {
+                margin-top: 2rem;
+            }
+        }
     }
+    
 
 
 }
