--- a/src/styles/Utils.scss
+++ b/src/styles/Utils.scss
@@ -16,6 +16,14 @@
     font-size: 1.6rem;
 }
 
+.p-large {
+    font-size: 1.4rem;
+}
+
+.p {
+    font-size: 1.2rem;
+}
+
 .hidden {
     display: none;
     overflow: hidden;
@@ -81,12 +89,20 @@
     margin: auto;
 }
 
+.margin-top {
+    margin-top: 2rem;
+}
+
 .margin-bottom {
     margin-bottom: 1rem;
 }
   
 .text-center {
     text-align: center;
+}
+
+.text-left {
+    text-align: left;
 }
 
 .bottom-line {
